# bitcoin-safe

./: .gitattributes  .gitignore  .optional_precommit_checks.py  .pre-commit-config.yaml  .update_version.py  AGENTS.md  CHANGELOG  CONTRIBUTING.md  COPYING  DCO.md  LICENSE  LICENSE.md  README.md  RELEASE_CHECKLIST.md  Readme.md  logging_config.yaml  pyproject.toml  pyrightconfig.json  requirements.in  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-test-mac.yml  build-appimage-and-test.yml  build-appimage-test.yml  build-appimage.yml  build-flatpak-and-test.yml  build-mac-arm.yml  build-mac-test.yml  build-mac.yml  build-tests.yml  build-windows-and-test.yml  build-windows-release-signing.yml  build-windows-test-sign.yml  build-windows-test.yml  build-windows.yml  check-build-reproducibility.yml  debug.yml  flatpak-reproducibility.yml  pre-commit.yml  python-tests.yml  run_all_builds.yml  tests.yml  weblate-correct.yml
bitcoin_safe/: __init__.py  __main__.py  address_comparer.py  app_metadata.py  bitcoin_quotes.py  bitcoin_safe_main.py  btcpay_address_fetcher.py  btcpay_config.py  category_info.py  client.py  client_helpers.py  compatibility.py  config.py  constants.py  cpfp_tools.py  descriptor_export_tools.py  descriptors.py  device_export.py  dynamic_lib_load.py  execute_config.py  fx.py  fx_types.py  geoip_rough.py  gnome_darkmode.py  hardware_signers.py  html.py  html_utils.py  hwi_rpc.py  i18n.py  invisible_scroll_area.py  keystore.py  labels.py  locktime_estimation.py  logging.py  logging_handlers.py  logging_setup.py  main.py  main.ui  mempool.py  mempool_data.py  (+34 more)
bitcoin_safe/cbf/: __main__.py  cbf_sync.py  minimal_cbf_sync.py
bitcoin_safe/data/: geoip_rough_v1.json  world_land_110m_simplified_v1.json
bitcoin_safe/gui/: __init__.py  explainer0.ui  explainer1.ui  new_wallet_design.ui  send.ui  settings.ui  sign_tx.ui
bitcoin_safe/p2p/: __main__.py  p2p_client.py  p2p_listener.py  peer_discovery.py  tools.py
bitcoin_safe/persister/: changeset_converter.py  serialize_persistence.py
bitcoin_safe/plugin_framework/: __init__.py  builtin_plugins.py  external_plugin_registry.py  external_plugin_registry_dataclasses.py  external_plugin_resources.py  paid_plugin_client.py  plugin_bundle.py  plugin_card_frame.py  plugin_client.py  plugin_conditions.py  plugin_diagnostics.py  plugin_display.py  plugin_identity.py  plugin_list_widget.py  plugin_manager.py  plugin_server.py  plugin_source_hash.py  plugin_source_models.py  plugin_source_widget.py  subscription_manager.py  subscription_price_lookup.py
bitcoin_safe/stubs/: typestubs.pyi
release-notes/: 1.0.0.md  1.0.1.md  1.0.3.md  1.0.4.md  1.0.5.md  1.0.6.md  1.0.7.md  1.1.0.md  1.2.0.md  1.2.1.md  1.2.2.md  1.2.3.md  1.3.0.md  1.3.1.md  1.3.2.md  1.3.3.md  1.4.0.md  1.5.0.md  1.6.0.md  1.6.1.md  1.7.0.md  1.7.1.md  1.8.0.md  1.8.1.md  2.0.0.md  2.0.1.md  2.1.0.md  2.1.1.md
tests/: btcpay_support.py  conftest.py  faucet.py  fill_regtest_wallet.py  helpers.py  setup_bitcoin_core.py  setup_fulcrum.py  test_btcpay_paybutton.py  test_cbf_update.py  test_div.py  test_helpers.py  test_keystore.py  test_labels.py  test_mail_handler.py  test_main_startup_args.py  test_migration.py  test_psbt_util.py  test_setup_bitcoin_code.py  test_setup_bitcoin_core.py  test_setup_fulcrum.py  test_signature_manager.py  test_signers.py  test_theme.py  test_tx_util.py  test_util.py  test_wallet.py  util.py  wallet_factory.py
tests/data/: 0.1.1.wallet  0.1.6_testnet.conf  0.2.0.wallet  bacon.wallet  config_0.1.0.conf  config_0.1.6_rpc.conf  config_0.1.6_testnet4_electrum.conf  config_0.1.6_testnet4_proxy_electrum.conf  recipients.csv  send_test.wallet  sparrow-1.8.4-manifest.txt  sparrow-1.8.4-manifest.txt.asc
tests/gui/: __init__.py
tests/non_gui/: test_address_comparer.py  test_app_name.py  test_build_pyinstaller_hiddenimports.py  test_chat_sync_label_syncer.py  test_client.py  test_config_app_lock.py  test_descriptors.py  test_external_plugins.py  test_filename_info.py  test_geoip_rough.py  test_hardware_signers.py  test_keystore.py  test_label_timestamp_chain.py  test_labels.py  test_linux_metadata.py  test_locktime_estimation.py  test_mail_handler.py  test_mempool_manager.py  test_message_signature_verifyer.py  test_migration.py  test_network_config_cbf_migration.py  test_network_utils.py  test_offline_custom_persist.py  test_p2p_listener.py  test_peer_discovery.py  test_plugin_diagnostics.py  test_plugin_source_hash.py  test_psbt_util.py  test_pyqt6_restart.py  test_send_test_schedule.py  test_signature_manager.py  test_signers.py  test_software_signer.py  test_startup_window_probe.py  test_subscription_support.py  test_ts_placeholders.py  test_tx_ui_infos.py  test_update_applier.py  test_wallet.py  test_wallet_coin_select.py  (+5 more)
tools/: __init__.py  appimage_to_deb_converter.py  build.py  build_pyinstaller_hiddenimports.py  build_tools_util.sh  check_header.py  compare_artifact_sets.py  dependency_check.py  download_rough_geoip_db.py  ensure_desktop_newline.py  generate_linux_metadata.py  generate_packaging_metadata.py  launch.json  license_header.txt  make_libsecp256k1.sh  make_libusb.sh  make_zbar.sh  native_git_dependencies.sh  release.py  release_notes.py  test_treeview_selection_colors.py  translation_handler.py  write_vscode_env.py
tools/build-mac/: README.md  README_macos.md  apply_sigs.sh  compare_dmg  create_styled_dmg.sh  make_osx.sh  osx.spec  package.sh  sign_osx.sh
tools/build-wine/: Dockerfile  bitcoin_safe.nsi  bitcoin_safe_metadata.nsh  build_exe.sh  compare_setup_builds.py  deterministic.spec  ensure-signed-file-integrity.py  prepare-wine.sh  run_in_docker.sh  verify_signed_executables.sh
tools/build_mac/: README.md  app_metadata.sh  compare_dmg  create_styled_dmg.sh  ensure_reproducible_dmg_tools.sh  extract_sigs.sh  make_osx.sh  osx.spec  package.sh  sign_osx.sh
tools/build_wine/: bitcoin_safe.nsi  bitcoin_safe_metadata.nsh  build_exe.sh  compare_setup_builds.py  deterministic.spec  run_in_docker.sh  verify_signed_executables.sh
tools/resources/: icon.icns  (+1 more)
(+402 files in other folders)
