[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "bitcoin-safe"
dynamic = ["version"]
description = "A bitcoin savings wallet for the entire family."
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
  { name = "andreasgriffin", email = "andreasgriffin@proton.me" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
  "fpdf2>=2.7.4,<3.0.0",
  "requests>=2.31.0,<3.0.0",
  "pyyaml>=6.0,<7.0",
  "bdkpython>=2.2.0,<3.0.0",
  "hwi>=2.3.1",
  "appdirs>=1.4.4,<2.0.0",
  "packaging>=24.0,<25.0",
  "reportlab==4.0.8",
  "cbor2>=5.6.0,<6.0.0",
  "pyqt6>=6.10,<7.0",
  "pyqt6-charts>=6.10,<7.0",
  "pgpy>=0.6.0,<0.7.0",
  "python-gnupg>=0.5.2,<0.6.0",
  "numpy==2.2.1",
  "pysocks>=1.7.1,<2.0.0",
  "cryptography>=45.0.2,<46.0.0",
  "bitcoin-nostr-chat @ git+https://github.com/andreasgriffin/bitcoin-nostr-chat.git@main",
  "bitcoin-usb @ git+https://github.com/andreasgriffin/bitcoin-usb.git@master",
  "bitcoin-qr-tools @ git+https://github.com/andreasgriffin/bitcoin-qr-tools.git@main",
  "bitcoin-safe-lib @ git+https://github.com/andreasgriffin/bitcoin-safe-lib.git@main",
  "aiohttp>=3.12.13,<4.0.0",
  "aiohttp-socks>=0.10.1,<0.11.0",
  "pycryptodome>=3.23.0,<4.0.0",
  "platformdirs>=4.2.0,<5.0.0",
]

[project.optional-dependencies]
build-mac = [
  "altgraph==0.17.4",
  "macholib==1.16.3",
  "pyinstaller-hooks-contrib>=2024.11",
  "hatchling==1.28.0",
]
build-wine = [
  "altgraph==0.17.4",
  "hatchling==1.28.0",
  "pathspec==0.12.1",
  "pefile==2023.2.7",
  "pywin32-ctypes==0.2.3",
  "pyinstaller-hooks-contrib>=2024.11",
]

[project.urls]
Homepage = "https://www.bitcoin-safe.org"

[tool.hatch.version]
path = "bitcoin_safe/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["bitcoin_safe"]
include = [
  "bitcoin_safe/gui/icons/**",
  "bitcoin_safe/gui/screenshots/**",
  "bitcoin_safe/gui/locales/**",
  "bitcoin_safe/gui/demo_wallets/**",
]

[tool.hatch.build.targets.sdist]
include = [
  "bitcoin_safe/**",
  "CHANGELOG",
  "LICENSE",
  "README.md",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
markers = [
    "marker_qt_1: marks tests as marker_qt_1 (deselect by default)",
    "marker_qt_2: marks tests as marker_qt_2 (deselect by default)",
    "marker_qt_3: marks tests as marker_qt_3 (deselect by default)"
]

[tool.ruff]
target-version = "py310"
line-length = 110
src = ["bitcoin_safe"]

[tool.ruff.lint]
# E+F are defaults; include I for isort-equivalent import sorting and a few handy extras.
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
# Optionally tune first/third party detection:
known-first-party = ["bitcoin_safe"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402", "F401", "F811"]
"tools/**/*" = ["ALL"]

[tool.ruff.format]
# Ruff formatter is Black-compatible; keep defaults or tweak here.

[dependency-groups]
dev = [
  "pytest>=8.2.2",
  "pytest-qt>=4.4.0",
  "requests>=2.31.0,<3.0.0",
  "pre-commit>=3.8.0",
  "python-gnupg>=0.5.2,<0.6.0",
  "translate-toolkit>=3.12.2,<4.0.0",
  "snakeviz>=2.2.0,<3.0.0",
  "pyprof2calltree>=1.4.5,<2.0.0",
  "pytest-xvfb>=3.0.0,<4.0.0",
  "tomlkit>=0.13.2,<0.14.0",
  "uv>=0.9.0,<1.0.0",
  "objgraph>=3.6.2,<4.0.0",
  "prettytable>=3.16.0,<4.0.0",
  "py-spy>=0.4.1,<0.5.0",
]
build-mac = [
  "altgraph==0.17.4",
  "macholib==1.16.3",
  "pyinstaller-hooks-contrib>=2024.11",
  "hatchling==1.28.0",
]
build-wine = [
  "altgraph==0.17.4",
  "hatchling==1.28.0",
  "pathspec==0.12.1",
  "pefile==2023.2.7",
  "pywin32-ctypes==0.2.3",
  "pyinstaller-hooks-contrib>=2024.11",
]
