 

[tool.poetry]
name = "bitcoin-safe"
# the version here and in all other places in this toml are updated automatically
# from the source: bitcoin_safe/__init__.py
version = "1.7.1"
description = "A bitcoin savings wallet for the entire family."
authors = [ "andreasgriffin <andreasgriffin@proton.me>",]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.bitcoin-safe.org"


packages = [
    { include = "bitcoin_safe" }      
]
include = [ 
    { path = "bitcoin_safe/gui/icons/*",        format = ["sdist", "wheel"] }, 
    { path = "bitcoin_safe/gui/screenshots/**",  format = ["sdist", "wheel"] },
    { path = "bitcoin_safe/gui/locales/**",      format = ["sdist", "wheel"] },
    { path = "bitcoin_safe/gui/demo_wallets/**", format = ["sdist", "wheel"] },
]

[tool.poetry-version-plugin]
source = "init"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fpdf2 = "^2.7.4"
requests = "^2.31.0"
pyyaml = "^6.0"
bdkpython ="^2.2.0"
hwi = ">=2.3.1"
appdirs = "^1.4.4"
reportlab = "4.0.8"
cbor2 = "^5.6.0"
pyqt6 = "^6.10"
pyqt6-charts = "^6.10"
pgpy = "^0.6.0"
python-gnupg = "^0.5.2"
numpy = "2.2.1" # error in wine/pyinstaller when increased
pysocks = "^1.7.1"
cryptography = "^45.0.5"
bitcoin-nostr-chat =  { git = "https://github.com/andreasgriffin/bitcoin-nostr-chat.git", branch = "main"  }
bitcoin-usb =   { git = "https://github.com/andreasgriffin/bitcoin-usb.git", branch = "master" }
bitcoin-qr-tools = {  git = "https://github.com/andreasgriffin/bitcoin-qr-tools.git", branch = "main" }
bitcoin-safe-lib  = {  git = "https://github.com/andreasgriffin/bitcoin-safe-lib.git", branch = "main" }
aiohttp = "^3.12.13"
aiohttp-socks = "^0.10.1"
pycryptodome = "^3.23.0"  # for hash160, since it is not in default openssl



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-qt = ">=4.4.0"
requests = "^2.31.0"
pre-commit = "^3.8.0"
python-gnupg = "^0.5.2"
translate-toolkit = "^3.12.2"
snakeviz = "^2.2.0"
pyprof2calltree = "^1.4.5"
pytest-xvfb = "^3.0.0"
tomlkit = "^0.13.2"
poetry = "^2.1.3"
objgraph = "^3.6.2"
prettytable = "^3.16.0"
py-spy = "^0.4.1"
pip-tools = "^7.5.2"  # for tools/deterministic-build/compile.sh



[tool.poetry.group.build_mac.dependencies]
altgraph =  "0.17.4"
macholib =  "1.16.3"
pyinstaller-hooks-contrib =  ">=2024.11"
hatchling = "1.26.3"        # dependency of pyinstaller

[tool.poetry.group.build_wine.dependencies]
altgraph="0.17.4"
pefile="2023.2.7"           # needed for  ensure-signed-file-integrity
pyinstaller-hooks-contrib=">=2024.11" # necessary to discover all submodules like jaraco
hatchling="1.26.3"          # dependency of pyinstaller



[tool.pytest.ini_options]
markers = [
    "marker_qt_1: marks tests as marker_qt_1 (deselect by default)",
    "marker_qt_2: marks tests as marker_qt_2 (deselect by default)",
    "marker_qt_3: marks tests as marker_qt_3 (deselect by default)"
]




[tool.ruff]
target-version = "py310"
line-length = 110
src = ["bitcoin_safe"]

[tool.ruff.lint]
# E+F are defaults; include I for isort-equivalent import sorting and a few handy extras.
select = ["E", "F", "I", "B", "UP"] 
ignore = ["E501"]

[tool.ruff.lint.isort]
# Optionally tune first/third party detection:
known-first-party = ["bitcoin_safe"]


[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402", "F401", "F811"]
"tools/**/*" = ["ALL"]


[tool.ruff.format]
# Ruff formatter is Black-compatible; keep defaults or tweak here.




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
